# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import visitsRouter from "./visits";
 import statsRouter from "./stats";
+import memoriesRouter from "./memories";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(visitsRouter);
 router.use(statsRouter);
+router.use(memoriesRouter);
 
 export default router;
